--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Automated World</title>
+    <title>Prestige World Travels</title>
 </head>
 <body>
     
-<script type="module" src="scripts/scotland/scotland.js"></script>    
+   
 </body>
 </html>
