--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>Prestige World Travels</title>
-</head>
-<body>
-    
-   
-</body>
+  </head>
+  <body>
+    <header>
+      <a href="index.html">
+        <img class="logo" src="/images/prestigelogo.png" alt="logo" />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="netherlands.html">The Netherlands</a></li>
+          <li><a href="fiji.html">Fiji</a></li>
+          <li><a href="norway.html">Norway</a></li>
+          <li><a href="scotland.html">Scotland</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h2>Popular Travel Destinations</h2>
+      <div class="country_container">
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+      </div>
+    </main>
+    <footer>&copy; 2021 Prestige World Travels</footer>
+
+    <script type="module" src="main.js"></script>
+  </body>
 </html>
