updated index.html with country images and updated scotland.html and js modules to populate page

--- a/scotland.html
+++ b/scotland.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="/styles/scotland.css" />
     <title>Prestige World Travels</title>
   </head>
   <body>
@@ -30,17 +30,23 @@
     </header>
     <main>
       <h2>Come explore what Scotland has in store!</h2>
-      <div class="scotland_elements">
-        <h2>Popular Cities</h2>
-        <section class=""></section>
-        <h2>Significant Landmarks</h2>
-        <section class=""></section>
-        <h2>Famous Citizens</h2>
-        <section class=""></section>
-      </div>
+      <section class="scotland_elements">
+        <div class="city_container">
+          <h2>Popular Cities</h2>
+          <section class="cityList"></section>
+        </div>
+        <div class="landmark_container">
+          <h2>Significant Landmarks</h2>
+          <section class="landmarkList"></section>
+        </div>
+        <div class="celebrity_container">
+          <h2>Celebrated Citizens</h2>
+          <section class="celebrityList"></section>
+        </div>
+      </section>
     </main>
     <footer>&copy; 2021 Prestige World Travels</footer>
 
-    <script type="module" src="scotland.js"></script>
+    <script type="module" src="/scripts/scotland/scotland.js"></script>
   </body>
 </html>
