--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
     <title>Prestige World Travels</title>
   </head>
   <body>
@@ -14,7 +14,9 @@
       </a>
       <nav>
         <ul>
-          <li><a href="netherlands.html">The Netherlands</a></li>
+          <li>
+            <a href="netherlands.html">The Netherlands</a>
+          </li>
           <li><a href="fiji.html">Fiji</a></li>
           <li><a href="norway.html">Norway</a></li>
           <li><a href="scotland.html">Scotland</a></li>
