--- a/netherlands.html
+++ b/netherlands.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-    <title>Prestige World Travels</title>
+    <title>The Netherlands</title>
   </head>
   <body>
     <header>
@@ -22,16 +22,21 @@
       </nav>
     </header>
     <main>
-      <h2>Popular Travel Destinations</h2>
-      <div class="country_container">
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
+      <h2>Celebrities</h2>
+      <div class="">
+        <section class="celebritiesList"></section>
+      </div>
+      <h2>Cities</h2>
+      <div class="">
+        <section class="citiesList"></section>
+      </div>
+      <h2>Landmarks</h2>
+      <div class="">
+        <section class="landmarksList"></section>
       </div>
     </main>
     <footer>&copy; 2021 Prestige World Travels</footer>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="netherlands.js"></script>
   </body>
 </html>
