added list and card modules and html page for netherlands

--- a/netherlands.html
+++ b/netherlands.html
@@ -37,6 +37,6 @@
     </main>
     <footer>&copy; 2021 Prestige World Travels</footer>
 
-    <script type="module" src="netherlands.js"></script>
+    <script type="module" src="/scripts/netherlands/netherlands.js"></script>
   </body>
 </html>
