--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
     <title>Prestige World Travels</title>
   </head>
   <body>
@@ -14,7 +14,9 @@
       </a>
       <nav>
         <ul>
-          <li><a href="netherlands.html">The Netherlands</a></li>
+          <li>
+            <a href="netherlands.html">The Netherlands</a>
+          </li>
           <li><a href="fiji.html">Fiji</a></li>
           <li><a href="norway.html">Norway</a></li>
           <li><a href="scotland.html">Scotland</a></li>
@@ -24,14 +26,29 @@
     <main>
       <h2>Popular Travel Destinations</h2>
       <div class="country_container">
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
+        <section class="img_container"></section>
+        <a href="netherlands.html">
+          <img src="/images/Netherlands.jpg" alt="Netherlands Photo" />
+          The Netherlands</a
+        >
+        <section class="img_container"></section>
+        <a href="fiji.html"
+          ><img src="/images/RoomsOnTheWater.jpg" alt="Fiji Photo" /> Fiji</a
+        >
+        <section class="img_container"></section>
+        <a href="norway.html"
+          ><img src="/images/norway-mountains2.jpg" alt="Norway Photo" />
+          Norway</a
+        >
+        <section class="img_container"></section>
+        <a href="scotland.html">
+          <img src="/images/scotland.jpg" alt="Scotland Photo" />
+          Scotland</a
+        >
       </div>
     </main>
     <footer>&copy; 2021 Prestige World Travels</footer>
 
-    <script type="module" src="main.js"></script>
+    <!-- <script type="module" src="main.js"></script> -->
   </body>
 </html>
