small norway changes

--- a/norway.html
+++ b/norway.html
@@ -9,29 +9,40 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <img class="logo" src="/images/prestigelogo.png" alt="logo" />
-      </a>
-      <nav>
-        <ul>
-          <li><a href="netherlands.html">The Netherlands</a></li>
-          <li><a href="fiji.html">Fiji</a></li>
-          <li><a href="norway.html">Norway</a></li>
-          <li><a href="scotland.html">Scotland</a></li>
-        </ul>
-      </nav>
+      <div class="logo_nav_wrapper">
+        <a href="index.html">
+          <img class="logo" src="/images/prestigelogo.png" alt="logo" />
+        </a>
+        <nav>
+          <ul>
+            <li><a href="netherlands.html">The Netherlands</a></li>
+            <li><a href="fiji.html">Fiji</a></li>
+            <li><a href="norway.html">Norway</a></li>
+            <li><a href="scotland.html">Scotland</a></li>
+          </ul>
+        </nav>
+      </div>
+      <h1>NORWAY</h1>
     </header>
     <main>
-      <h2>Popular Travel Destinations</h2>
-      <div class="country_container">
-        <section class="cityList"></section>
-        <section class="landmarkList"></section>
-        <section class="celebList"></section>
-        <section class=""></section>
-      </div>
+      <h2>Cool stuff from Norway</h2>
+      <section class="scotland_elements">
+        <div class="city_container">
+          <h2>Tourist Cities</h2>
+          <section class="cityList"></section>
+        </div>
+        <div class="landmark_container">
+          <h2>Landmarks</h2>
+          <section class="landmarkList"></section>
+        </div>
+        <div class="celebrity_container">
+          <h2>Famous Citizens</h2>
+          <section class="celebList"></section>
+        </div>
+      </section>
     </main>
     <footer>&copy; 2021 Prestige World Travels</footer>
 
-    <script type="module" src="scripts/norway/norway.js"></script>
+<script type="module" src="scripts/norway/norway.js"></script>
   </body>
 </html>
