updated styling for landing page and scotland page

--- a/scotland.html
+++ b/scotland.html
@@ -24,18 +24,21 @@
             <li><a href="netherlands.html">The Netherlands</a></li>
             <li><a href="fiji.html">Fiji</a></li>
             <li><a href="norway.html">Norway</a></li>
-            <li><a href="scotland.html">Scotland</a></li>
+            <li class="boldLink"><a href="scotland.html">Scotland</a></li>
           </ul>
         </nav>
       </div>
-      <h4>SCOTLAND</h4>
-      <h3>
-        ‘Fantasy, myth, legend, truth – all are intertwined in the story that is
-        Scotland.’ ― Laurence Overmire
-      </h3>
+      <div class="title_flag_wrapper">
+        <h4>SCOTLAND</h4>
+        <img src="images/scotlandflag.png" alt="scottish flag" />
+        <p>
+          ‘Fantasy, myth, legend, truth – all are intertwined in the story that
+          is Scotland.’ ― Laurence Overmire
+        </p>
+      </div>
     </header>
     <main>
-      <h2>Come explore what Scotland has in store!</h2>
+      <h5>Come explore what Scotland has in store!</h5>
       <section class="scotland_elements">
         <div class="city_container">
           <h2>Popular Cities</h2>
