--- a/netherlands.html
+++ b/netherlands.html
@@ -4,39 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles/netherlands.css" />
     <title>The Netherlands</title>
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <img class="logo" src="/images/prestigelogo.png" alt="logo" />
-      </a>
-      <nav>
-        <ul>
-          <li><a href="netherlands.html">The Netherlands</a></li>
-          <li><a href="fiji.html">Fiji</a></li>
-          <li><a href="norway.html">Norway</a></li>
-          <li><a href="scotland.html">Scotland</a></li>
-        </ul>
-      </nav>
+      <div class="logo_nav_wrapper">
+        <a href="index.html">
+          <img class="logo" src="/images/prestigelogo.png" alt="logo" />
+        </a>
+        <nav class="nav_container">
+          <ul>
+            <li class="boldLink"><a href="netherlands.html">The Netherlands</a></li>
+            <li><a href="fiji.html">Fiji</a></li>
+            <li><a href="norway.html">Norway</a></li>
+            <li><a href="scotland.html">Scotland</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="title_flag_wrapper">
+        <h4>THE NETHERLANDS</h4>
+        <img src="images/netherlands-flag.png" alt="netherlands flag" />
+        <p>
+          Je Maintiendrai ('I will maintain')
+        </p>
+      </div>
     </header>
     <main>
-      <h2>Celebrities</h2>
-      <div class="">
-        <section class="celebritiesList"></section>
-      </div>
-      <h2>Cities</h2>
-      <div class="">
-        <section class="citiesList"></section>
-      </div>
-      <h2>Landmarks</h2>
-      <div class="">
-        <section class="landmarksList"></section>
-      </div>
+      <h5>Experience the country as small as a city!</h5>
+      <section class="netherlands_elements">
+        <div class="city_container">
+          <h2>Popular Cities</h2>
+          <section class="citiesList"></section>
+        </div>
+        <div class="landmark_container">
+          <h2>Significant Landmarks</h2>
+          <section class="landmarksList"></section>
+        </div>
+        <div class="celebrity_container">
+          <h2>Celebrated Citizens</h2>
+          <section class="celebritiesList"></section>
+        </div>
+      </section>
     </main>
     <footer>&copy; 2021 Prestige World Travels</footer>
 
-    <script type="module" src="/scripts/netherlands/netherlands.js"></script>
+    <script type="module" src="./scripts/netherlands/netherlands.js"></script>
   </body>
 </html>
